--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": "^7.2|^8.0",
         "symfony/polyfill-php80": "^1.22",
 
-        "decodelabs/veneer": "^0.7|^0.8",
+        "decodelabs/veneer": "^0.8",
         "decodelabs/exceptional": "^0.3",
         "decodelabs/glitch-support": "^0.3",
 
