--- a/composer.json
+++ b/composer.json
@@ -9,24 +9,21 @@
         "email": "tom@inflatablecookie.com"
     }],
     "require": {
-        "php": "^7.2|^8.0",
-        "symfony/polyfill-php80": "^1.22",
+        "php": "^8.0",
 
-        "decodelabs/veneer": "^0.8",
-        "decodelabs/exceptional": "^0.3",
-        "decodelabs/glitch-support": "^0.3",
+        "decodelabs/veneer": "^0.8|^0.9",
+        "decodelabs/exceptional": "^0.4",
+        "decodelabs/glitch-support": "^0.4",
 
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8",
+        "phpunit/phpunit": "^9",
         "phpstan/phpstan": "^1",
         "phpstan/extension-installer": "^1.0",
-        "decodelabs/phpstan-decodelabs": "^0.5",
-        "symplify/easy-coding-standard": "^10",
+        "symplify/easy-coding-standard": "^11",
 
-        "decodelabs/atlas": "^0.9",
-        "decodelabs/terminus": "^0.7"
+        "decodelabs/phpstan-decodelabs": "^0.6"
     },
     "autoload": {
         "psr-4": {
@@ -38,7 +35,12 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-develop": "0.1.x-dev"
+            "dev-develop": "0.2.x-dev"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "phpstan/extension-installer": true
         }
     },
     "scripts": {
