--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": "^8.0",
 
-        "decodelabs/veneer": "^0.8|^0.9",
+        "decodelabs/veneer": "^0.8|^0.9-dev",
         "decodelabs/exceptional": "^0.4",
         "decodelabs/glitch-support": "^0.4",
 
