--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "decodelabs/veneer": "^0.9",
         "decodelabs/exceptional": "^0.4",
         "decodelabs/glitch-support": "^0.4",
+        "decodelabs/tightrope": "^0.1.1",
 
         "psr/http-message": "^1.0"
     },
