--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "decodelabs/exceptional": "^0.4",
         "decodelabs/glitch-support": "^0.4",
         "decodelabs/tightrope": "^0.1.1",
-        "decodelabs/veneer": "^0.10.7",
+        "decodelabs/veneer": "^0.10.10",
 
         "psr/http-message": "^1.0"
     },
@@ -25,9 +25,7 @@
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "symplify/easy-coding-standard": "^11",
 
-        "decodelabs/phpstan-decodelabs": "^0.6",
-        "decodelabs/atlas": "^0.10.4",
-        "decodelabs/terminus": "^0.8.4"
+        "decodelabs/phpstan-decodelabs": "^0.6"
     },
     "autoload": {
         "psr-4": {
