Updated package structure
Signed-off-by: Tom Wright <tom@inflatablecookie.com>

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "autoload": {
         "psr-4": {
-            "DecodeLabs\\Deliverance\\": "src/"
+            "DecodeLabs\\": "src/"
         }
     },
     "extra": {
